--- a/tracuu.html
+++ b/tracuu.html
@@ -182,6 +182,7 @@
             <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/phieu_kiem_tra_lop.html'">📄 Phiếu Kiểm Tra Lốp</button>
             <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/index.html'">📄 Phiếu Kiểm Tra Xe </button>
             <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/kiemtragam.html'">📄 Phiếu Kiểm Gầm</button>
+            <button class="tire-form-button" onclick="window.location.href='https://longvt89.github.io/phieukiemtra/baoduong.html'">📄 Phiếu Bảo Dưỡng</button>
         </div>
     <div class="container">
         <h1 class="text-3xl font-bold text-gray-800 mb-8 text-center">Tra Cứu Thông Tin Xe</h1>
