--- a/baoduong.html
+++ b/baoduong.html
@@ -479,67 +479,67 @@
                 'KT áp suất lốp', 'KT đèn, còi, gạt mưa'
             ]},
             { km: 5000, level: 'Cấp 1', items: [
-                'KT và thay dầu động cơ', 'KT và thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
+                'KT & thay dầu động cơ', 'KT & thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
                 'KT áp suất lốp', 'KT đèn chiếu sáng, còi, gạt mưa', 'Vệ sinh lọc gió động cơ', 'KT tình trạng ắc quy',
             ]},
             { km: 10000, level: 'Cấp 2', items: [
-                'KT và thay dầu động cơ', 'KT và thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
+                'KT & thay dầu động cơ', 'KT & thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
                 'KT áp suất lốp', 'KT đèn chiếu sáng, còi, gạt mưa', 'Vệ sinh hoặc thay lọc gió động cơ',
                 'KT tình trạng ắc quy', 'KT hệ thống phanh (má phanh, đĩa phanh)', 'KT lọc gió điều hòa',
                 'KT hệ thống treo và lái', 'KT dầu hộp số (nếu có)',
             ]},
             { km: 15000, level: 'Cấp 1', items: [
-                'KT và thay dầu động cơ', 'KT và thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
+                'KT & thay dầu động cơ', 'KT & thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
                 'KT áp suất lốp', 'KT đèn chiếu sáng, còi, gạt mưa', 'Vệ sinh lọc gió động cơ', 'KT tình trạng ắc quy',
             ]},
             { km: 20000, level: 'Cấp 3', items: [
-                'KT và thay dầu động cơ', 'KT và thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
+                'KT & thay dầu động cơ', 'KT & thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
                 'KT áp suất lốp', 'KT đèn chiếu sáng, còi, gạt mưa', 'Thay lọc gió động cơ', 'KT tình trạng ắc quy',
                 'KT hệ thống phanh (má phanh, đĩa phanh)', 'Thay lọc gió điều hòa', 'KT hệ thống treo và lái',
                 'KT dầu hộp số', 'KT bugi (nếu đến hạn thay)', 'KT dây đai truyền động',
             ]},
             { km: 25000, level: 'Cấp 1', items: [
-                'KT và thay dầu động cơ', 'KT và thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
+                'KT & thay dầu động cơ', 'KT & thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
                 'KT áp suất lốp', 'KT đèn chiếu sáng, còi, gạt mưa', 'Vệ sinh lọc gió động cơ', 'KT tình trạng ắc quy',
             ]},
             { km: 30000, level: 'Cấp 2', items: [
-                'KT và thay dầu động cơ', 'KT và thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
+                'KT & thay dầu động cơ', 'KT & thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
                 'KT áp suất lốp', 'KT đèn chiếu sáng, còi, gạt mưa', 'Vệ sinh hoặc thay lọc gió động cơ',
                 'KT tình trạng ắc quy', 'KT hệ thống phanh (má phanh, đĩa phanh)', 'KT lọc gió điều hòa',
                 'KT hệ thống treo và lái', 'KT dầu hộp số (nếu có)',
             ]},
             { km: 35000, level: 'Cấp 1', items: [
-                'KT và thay dầu động cơ', 'KT và thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
+                'KT & thay dầu động cơ', 'KT & thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
                 'KT áp suất lốp', 'KT đèn chiếu sáng, còi, gạt mưa', 'Vệ sinh lọc gió động cơ', 'KT tình trạng ắc quy',
             ]},
             { km: 40000, level: 'Cấp 4', items: [
-                'KT và thay dầu động cơ', 'KT và thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
+                'KT & thay dầu động cơ', 'KT & thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
                 'KT áp suất lốp', 'KT đèn chiếu sáng, còi, gạt mưa', 'Thay lọc gió động cơ', 'KT tình trạng ắc quy',
-                'KT và thay thế má phanh, đĩa phanh nếu cần', 'Thay lọc gió điều hòa', 'KT hệ thống treo và lái',
-                'Thay dầu hộp số', 'Thay bugi', 'KT và thay dây đai truyền động', 'KT hệ thống nhiên liệu',
-                'KT hệ thống xả', 'Vệ sinh kim phun', 'KT và thay nước làm mát',
+                'KT & thay thế má phanh, đĩa phanh nếu cần', 'Thay lọc gió điều hòa', 'KT hệ thống treo và lái',
+                'Thay dầu hộp số', 'Thay bugi', 'KT & thay dây đai truyền động', 'KT hệ thống nhiên liệu',
+                'KT hệ thống xả', 'Vệ sinh kim phun', 'KT & thay nước làm mát',
             ]},
             { km: 45000, level: 'Cấp 1', items: [
-                'KT và thay dầu động cơ', 'KT và thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
+                'KT & thay dầu động cơ', 'KT & thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
                 'KT áp suất lốp', 'KT đèn chiếu sáng, còi, gạt mưa', 'Vệ sinh lọc gió động cơ', 'KT tình trạng ắc quy',
             ]},
             { km: 50000, level: 'Cấp 2', items: [
-                'KT và thay dầu động cơ', 'KT và thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
+                'KT & thay dầu động cơ', 'KT & thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
                 'KT áp suất lốp', 'KT đèn chiếu sáng, còi, gạt mưa', 'Vệ sinh hoặc thay lọc gió động cơ',
                 'KT tình trạng ắc quy', 'KT hệ thống phanh (má phanh, đĩa phanh)', 'KT lọc gió điều hòa',
                 'KT hệ thống treo và lái', 'KT dầu hộp số (nếu có)',
             ]},
             { km: 55000, level: 'Cấp 1', items: [
-                'KT và thay dầu động cơ', 'KT và thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
+                'KT & thay dầu động cơ', 'KT & thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
                 'KT áp suất lốp', 'KT đèn chiếu sáng, còi, gạt mưa', 'Vệ sinh lọc gió động cơ', 'KT tình trạng ắc quy',
             ]},
             { km: 60000, level: 'Cấp 4+', items: [
-                'KT và thay dầu động cơ', 'KT và thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
+                'KT & thay dầu động cơ', 'KT & thay lọc dầu', 'KT mực nước làm mát, dầu phanh, dầu trợ lực lái',
                 'KT áp suất lốp', 'KT đèn chiếu sáng, còi, gạt mưa', 'Thay lọc gió động cơ', 'KT tình trạng ắc quy',
-                'KT và thay thế má phanh, đĩa phanh nếu cần', 'Thay lọc gió điều hòa', 'KT hệ thống treo và lái',
-                'Thay dầu hộp số', 'Thay bugi', 'KT và thay dây đai truyền động', 'KT hệ thống nhiên liệu',
-                'KT hệ thống xả', 'Vệ sinh kim phun', 'KT và thay nước làm mát',
-                'KT và thay dầu phanh', 'KT và thay dầu trợ lực lái',
+                'KT & thay thế má phanh, đĩa phanh nếu cần', 'Thay lọc gió điều hòa', 'KT hệ thống treo và lái',
+                'Thay dầu hộp số', 'Thay bugi', 'KT & thay dây đai truyền động', 'KT hệ thống nhiên liệu',
+                'KT hệ thống xả', 'Vệ sinh kim phun', 'KT & thay nước làm mát',
+                'KT & thay dầu phanh', 'KT & thay dầu trợ lực lái',
             ]}
         ];
 
