--- a/kiemtragam.html
+++ b/kiemtragam.html
@@ -87,13 +87,11 @@
             height: 70px;
         }
         .logo-container img {
-            width: 70px;
-            height: 70px;
+            width: 70px; height: 70px;
         }
         /* Điều chỉnh các cặp label-input trong phần thông tin */
         .info-field-group {
-            display: flex;
-            align-items: center;
+            display: flex; align-items: center;
             gap: 0.2rem; /* Khoảng cách nhỏ giữa label và input */
         }
         .info-field-group label {
@@ -103,10 +101,12 @@
             min-width: 40px; /* Đảm bảo label có độ rộng tối thiểu */
         }
         .info-field-group input,
-        .info-field-group textarea {
-            flex-grow: 1; /* Cho phép input/textarea mở rộng */
-            min-width: 0; /* Cho phép input/textarea co lại */
+        .info-field-group textarea,
+        .info-field-group select { /* Thêm select vào đây */
+            flex-grow: 1; /* Cho phép input/textarea/select mở rộng */
+            min-width: 0; /* Cho phép input/textarea/select co lại */
         }
+
 
         /* === ĐIỀU CHỈNH: Style cho textarea trong bảng (hiện trạng kiểm tra) === */
         .table-textarea {
@@ -155,7 +155,7 @@
                 margin: 0 !important;
             }
             /* === ĐIỀU CHỈNH CHUNG CHO INPUT/TEXTAREA KHI IN === */
-            textarea, input {
+            textarea, input, select { /* Thêm select vào đây */
                 border: 1px solid black !important;
                 box-shadow: none !important;
                 padding: 0.03rem 0.08rem !important; /* Thu gọn padding tối đa khi in */
@@ -244,8 +244,7 @@
             table th:nth-child(2),
             table td:nth-child(2) {
                 width: 400px !important; /* CHIỀU RỘNG TỔNG THỂ CỦA CỘT KHI IN (như khung bạn đã vẽ) */
-                min-width: 400px !important; 
-                /* Giá trị này sẽ định nghĩa "giới hạn table" mà bạn đã khoanh đỏ. */
+                min-width: 400px !important; /* Giá trị này sẽ định nghĩa "giới hạn table" mà bạn đã khoanh đỏ. */
                 /* Bạn có thể tăng hoặc giảm nó tùy theo ý muốn chính xác. */
             }
             /* === ĐIỀU CHỈNH CÁC CỘT CHECKBOX ĐỂ NHƯỜNG KHÔNG GIAN (Đẩy sát vào) === */
@@ -293,8 +292,7 @@
                 height: 50px !important;
             }
             header .logo-container img {
-                width: 50px !important;
-                height: 50px !important;
+                width: 50px !important; height: 50px !important;
             }
             header h1 {
                 font-size: 1.0rem !important;
@@ -403,7 +401,17 @@
                 <label for="other">Khác:</label>
                 <input type="text" id="other" name="other" placeholder="Khác" />
             </div>
-        </section>
+
+            <div class="col-span-6 info-field-group">
+                <label for="branchSelect">Chi nhánh:</label>
+                <select id="branchSelect" name="chiNhanh" class="info-input" required>
+                    <option value="">-- Chọn chi nhánh --</option>
+                    <option value="Chi Nhánh 1 - Bình Phước">Chi Nhánh 1 - Bình Phước</option>
+                    <option value="Chi Nhánh 2 - Đồng Xoài">Chi Nhánh 2 - Đồng Xoài</option>
+                    <option value="Chi Nhánh 3 - Bình Dương">Chi Nhánh 3 - Bình Dương</option>
+                </select>
+            </div>
+            </section>
 
         
         <section class="mb-3">
@@ -470,7 +478,86 @@
         // Constants for Local Storage keys
         const FORM_DATA_GAM_KEY = 'phieuKiemTraGam_formData'; // Unique key for this form
 
+        // Constants for branch locations
+        const branchLocations = [
+            { name: 'Chi Nhánh 1 - Bình Phước', lat: 11.5145974, lon: 106.8931262 },
+            { name: 'Chi Nhánh 2 - Đồng Xoài', lat: 11.537788, lon: 106.905191 },
+            { name: 'Chi Nhánh 3 - Bình Dương', lat: 11.004401, lon: 106.6719367 }
+        ];
+        const GEOLOCATION_ERROR_RADIUS = 100; // meters
+
         // --- Utility Functions ---
+
+        /**
+         * Calculates the distance between two geographical points using the Haversine formula.
+         * @param {number} lat1 - Latitude of point 1 in degrees.
+         * @param {number} lon1 - Longitude of point 1 in degrees.
+         * @param {number} lat2 - Latitude of point 2 in degrees.
+         * @param {number} lon2 - Longitude of point 2 in degrees.
+         * @returns {number} Distance in meters.
+         */
+        function getDistance(lat1, lon1, lat2, lon2) {
+            const R = 6371e3; // metres
+            const φ1 = lat1 * Math.PI / 180; // φ, λ in radians
+            const φ2 = lat2 * Math.PI / 180;
+            const Δφ = (lat2 - lat1) * Math.PI / 180;
+            const Δλ = (lon2 - lon1) * Math.PI / 180;
+
+            const a = Math.sin(Δφ / 2) * Math.sin(Δφ / 2) +
+                      Math.cos(φ1) * Math.cos(φ2) *
+                      Math.sin(Δλ / 2) * Math.sin(Δλ / 2);
+            const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1 - a));
+
+            const d = R * c; // in metres
+            return d;
+        }
+
+        /**
+         * Determines the closest branch based on current geolocation and automatically selects it.
+         */
+        function getClosestBranch() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(
+                    (position) => {
+                        const userLat = position.coords.latitude;
+                        const userLon = position.coords.longitude;
+                        let closestBranch = null;
+                        let minDistance = Infinity;
+
+                        branchLocations.forEach(branch => {
+                            const distance = getDistance(userLat, userLon, branch.lat, branch.lon);
+                            if (distance < minDistance) {
+                                minDistance = distance;
+                                closestBranch = branch;
+                            }
+                        });
+
+                        const branchSelect = document.getElementById('branchSelect');
+                        if (closestBranch && minDistance <= GEOLOCATION_ERROR_RADIUS) { // Within 100 meters
+                            branchSelect.value = closestBranch.name;
+                            console.log(`Tự động chọn chi nhánh: ${closestBranch.name} (khoảng cách: ${minDistance.toFixed(2)}m)`);
+                        } else if (closestBranch) {
+                            console.log(`Chi nhánh gần nhất (${closestBranch.name}) ở ngoài bán kính cho phép (${minDistance.toFixed(2)}m > ${GEOLOCATION_ERROR_RADIUS}m). Không tự động chọn.`);
+                        } else {
+                            console.log('Không tìm thấy chi nhánh nào gần nhất.');
+                        }
+                        saveFormDataGam(); // Save after potentially setting branch
+                    },
+                    (error) => {
+                        console.warn(`Lỗi khi lấy vị trí: ${error.message}`);
+                        alert('Không thể tự động xác định chi nhánh. Vui lòng chọn thủ công. Lỗi: ' + error.message);
+                    },
+                    {
+                        enableHighAccuracy: true,
+                        timeout: 10000,
+                        maximumAge: 0
+                    }
+                );
+            } else {
+                console.log('Trình duyệt không hỗ trợ Geolocation.');
+                alert('Trình duyệt của bạn không hỗ trợ định vị. Vui lòng chọn chi nhánh thủ công.');
+            }
+        }
 
         // Auto-resize textarea function
         function autoResizeTextarea(textarea) {
@@ -498,8 +585,7 @@
             const formData = {};
             // Select all relevant form elements (inputs, textareas, selects).
             // Exclude read-only inputs that are calculated or displayed
-            const inputs = form.querySelectorAll('input:not([readonly]), textarea, select'); 
-
+            const inputs = form.querySelectorAll('input:not([readonly]), textarea, select');
             inputs.forEach(input => {
                 if (input.name) { // Only process elements with a 'name' attribute
                     if (input.type === 'checkbox') {
@@ -524,7 +610,6 @@
             const formData = JSON.parse(savedData);
             const form = document.getElementById('inspectionForm');
             if (!form) return;
-
             for (const name in formData) {
                 const elements = form.querySelectorAll(`[name="${name}"]`);
                 if (elements.length > 0) {
@@ -568,14 +653,12 @@
             });
             const radioGroupNames = new Set();
             formElement.querySelectorAll('input[type="radio"]').forEach(radio => radioGroupNames.add(radio.name));
-
             radioGroupNames.forEach(groupName => {
                 const checkedRadioInGroup = formElement.querySelector(`input[type="radio"][name="${groupName}"]:checked`);
                 if (!checkedRadioInGroup && !params.has(groupName)) {
                     params.append(groupName, '');
                 }
             });
-
             return params.toString();
         }
 
@@ -587,6 +670,7 @@
             setInitialReceiveDate(); // Set current date for receiveDate
 
             loadFormDataGam(); // Attempt to load saved data when page loads
+            getClosestBranch(); // Attempt to get and set closest branch on load
 
             const form = document.getElementById('inspectionForm');
             if (form) {
